@@ -13,6 +13,7 @@ Version 5.6.0 (TBD)
     Added new `name` field to the `style_formats` setting object to enable specifying a name for the format. #TINY-4239
     Changed `readonly` mode to allow hyperlinks to be clickable #TINY-6248
     Fixed layout issues when empty `tr` elements were incorrectly removed from tables #TINY-4679
+    Fixed image file extensions lost when uploading an image with an alternative extension (eg jfif) #TINY-6622
     Fixed a security issue where URLs in attributes weren't correctly sanitized #TINY-6518
     Fixed `DOMUtils.getParents` incorrectly including the shadow root in the array of elements returned #TINY-6540
     Fixed an issue where the root document could be scrolled while an editor dialog was open inside a shadow root #TINY-6363
